Added some results

--- a/report/src/sections/05-results.tex
+++ b/report/src/sections/05-results.tex
@@ -1,4 +1,19 @@
 \section{Results}\label{sec:results}
 \subsection{Connected peers}\label{subsec:connected-peers}
+
+\begin{figure*}[!ht]
+\includegraphics[width=\linewidth]{figures/conPeer2}
+\caption{The number of peers our node was connected to over the time of the experiment.
+Data points are collected every minute}
+\label{fig:peersconnected}
+\end{figure*}
 \subsection{Deanonymization}\label{subsec:deanonymization}
+Deanonymized validators = 493,551
+
+IPs collected = 1183
+
+Average connected = 148
+
+Nodes with validators = 513
 \subsection{Validator Distribution}\label{subsec:validator-distribution}
+wip
