--- a/report/src/setup/preamble.tex
+++ b/report/src/setup/preamble.tex
@@ -11,6 +11,7 @@
 \usepackage{dsfont}
 \usepackage{bbold}
 \usepackage{booktabs}
+\usepackage{graphicx}
 \usepackage{tikz}
 \usetikzlibrary{arrows.meta,arrows}
 
