--- a/report/src/sections/05-results.tex
+++ b/report/src/sections/05-results.tex
@@ -6,7 +6,7 @@ The number of connected peers is shown in Figure~\ref{fig:peersconnected}.
 The most peers our nodes was connected to at once was 300, and the average was 148.
 Over the course of the experiment, the number of connected peers fluctuated a lot but would continually rise for the first 12 hours.
 Then it would heavily drop and rise again.
-After the first drop it would then drop consistently every 7 hours.
+This pattern would repeat, but after the first drop it would then drop consistently every 7 hours insted.
 
 \begin{figure*}[!ht]
     \includegraphics[width=\linewidth]{figures/conPeer2}
