--- a/report/src/sections/05-results.tex
+++ b/report/src/sections/05-results.tex
@@ -2,11 +2,11 @@
 
 \subsection{Connected peers}\label{subsec:connected-peers}
 Throughout the experiment, we kept track of the number of peers our node was connected to.
-The number of connected peers is shown in Figure~\ref{fig:peersconnected}.
+The number of connected peers is shown in~\autoref{fig:peersconnected}.
 The most peers our nodes was connected to at once was 300, and the average was 148.
 Over the course of the experiment, the number of connected peers fluctuated a lot but would continually rise for the first 12 hours.
 Then it would heavily drop and rise again.
-This pattern would repeat, but after the first drop it would then drop consistently every 7 hours insted.
+This pattern would repeat, but after the first drop it would then drop consistently every 7 hours instead.
 
 \begin{figure*}[!ht]
     \includegraphics[width=\linewidth]{figures/conPeer2}
