Added validator dist table

--- a/report/src/sections/05-results.tex
+++ b/report/src/sections/05-results.tex
@@ -42,4 +42,8 @@ Average connected = 148
 Nodes with validators = 513
 
 \subsection{Validator Distribution}\label{subsec:validator-distribution}
-wip
+\begin{figure*}[!ht]
+    \includegraphics[width=\linewidth]{figures/cdf}
+    \caption{The cdf showing the distribution of validators on each peer}
+    \label{fig:validatorsonpeers}
+\end{figure*}
