--- a/report/src/setup/acronyms.tex
+++ b/report/src/setup/acronyms.tex
@@ -3,7 +3,7 @@
 
 \newacronym{aau}{AAU}{Aalborg University}
 \newacronym{zkp}{ZKP}{Zero-Knowledge Proof}
-\newacronym{pos}{POS}{Proof of Stake}
+\newacronym{pos}{PoS}{Proof of Stake}
 \newacronym{pow}{PoW}{Proof of Work}
 \newacronym{zk-snark}{ZK-SNARK}{Zero-Knowledge Succinct Non-Interactive Argument of Knowledge}
 \newacronym{zk-stark}{ZK-STARK}{Zero-Knowledge Scalable Transparent Argument of Knowledge}
