--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -170,7 +170,7 @@ the data is logged to a database as in~\autoref{subsubsec:peers}.
 \subsection{Setup}\label{subsec:setup}
 The primary goal of the experiment is to log as much data from attestations and peers as possible.
 To do this, we modify the implementation of the Prysm consensus client~\cite{prysm}.
-Prysm is also one of the most used clients for connecting with the consensus layer.
+Prysm is also one of the most used clients for connecting with the consensus layer~\cite{client-diversity}.
 
 The client was then run on a virtual machine hosted on Strato Claaudia through Aalborg University.
 
