--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -247,6 +247,21 @@ and Garay, Juan",
     url = {https://github.com/ethereum/consensus-specs/blob/dev/specs/phase0/beacon-chain.md}
 }
 
+@article{prysm,
+    title        = {Prysm},
+    author       = {Prysmatic Labs},
+    note         = {Accessed: 12-01-2024},
+    url = {https://github.com/prysmaticlabs/prysm}
+}
+
+@article{client-diversity,
+    title        = {Client diversity},
+    author       = {Ether Alpha},
+    note         = {Accessed: 12-01-2024},
+    url = {https://clientdiversity.org/#distribution}
+}
+https://clientdiversity.org/#distribution
+
 @misc{heimbach2024deanonymizingethereumvalidatorsp2p,
     title={Deanonymizing Ethereum Validators: The P2P Network Has a Privacy Issue},
     author={Lioba Heimbach and Yann Vonlanthen and Juan Villacis and Lucianna Kiffer and Roger Wattenhofer},
